Fix navbar items not showing

--- a/cegs_portal/static/css/project.css
+++ b/cegs_portal/static/css/project.css
@@ -966,14 +966,6 @@ input[type="submit"], input[type="button"], button {
   margin-bottom: 1.25rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
 .ml-1 {
   margin-left: 0.25rem;
 }
@@ -1000,6 +992,10 @@ input[type="submit"], input[type="button"], button {
 
 .mb-\[10px\] {
   margin-bottom: 10px;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .ml-6 {
@@ -1354,10 +1350,6 @@ input[type="submit"], input[type="button"], button {
   width: 0.25rem;
 }
 
-.min-w-\[5em\] {
-  min-width: 5em;
-}
-
 .min-w-fit {
   min-width: -webkit-fit-content;
   min-width: -moz-fit-content;
@@ -1398,10 +1390,6 @@ input[type="submit"], input[type="button"], button {
   max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
   max-width: fit-content;
-}
-
-.max-w-5xl {
-  max-width: 64rem;
 }
 
 .max-w-\[200px\] {
@@ -1468,16 +1456,16 @@ input[type="submit"], input[type="button"], button {
           flex-grow: 1;
 }
 
-.grow {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-}
-
 .grow-0 {
   -webkit-box-flex: 0;
       -ms-flex-positive: 0;
           flex-grow: 0;
+}
+
+.grow {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 .basis-1\/3 {
@@ -1774,15 +1762,6 @@ input[type="submit"], input[type="button"], button {
           appearance: none;
 }
 
-.auto-cols-max {
-  grid-auto-columns: -webkit-max-content;
-  grid-auto-columns: max-content;
-}
-
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -1850,10 +1829,6 @@ input[type="submit"], input[type="button"], button {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-}
-
-.gap-4 {
-  gap: 1rem;
 }
 
 .gap-1 {
@@ -4907,9 +4882,23 @@ input[type="submit"], input[type="button"], button {
       }
     }
   }
+}
 
+@media not all and (min-width: 768px) {
+  @media (orientation: landscape) {
+    .max-md\:landscape\:h-8 {
+      height: 2rem;
+    }
+  }
+}
+
+@media (min-width: 320px) {
   @media not all and (min-width: 768px) {
     @media (orientation: landscape) {
+      .xs\:max-md\:landscape\:mt-24 {
+        margin-top: 6rem;
+      }
+
       .xs\:max-md\:landscape\:h-\[360px\] {
         height: 360px;
       }
@@ -4918,8 +4907,16 @@ input[type="submit"], input[type="button"], button {
         height: 100%;
       }
 
+      .xs\:max-md\:landscape\:h-8 {
+        height: 2rem;
+      }
+
       .xs\:max-md\:landscape\:w-\[475px\] {
         width: 475px;
+      }
+
+      .xs\:max-md\:landscape\:w-8 {
+        width: 2rem;
       }
 
       .xs\:max-md\:landscape\:flex-row {
@@ -4938,32 +4935,6 @@ input[type="submit"], input[type="button"], button {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-  }
-}
-
-@media not all and (min-width: 768px) {
-  @media (orientation: landscape) {
-    .max-md\:landscape\:h-8 {
-      height: 2rem;
-    }
-  }
-}
-
-@media (min-width: 320px) {
-  @media not all and (min-width: 768px) {
-    @media (orientation: landscape) {
-      .xs\:max-md\:landscape\:mt-24 {
-        margin-top: 6rem;
-      }
-
-      .xs\:max-md\:landscape\:h-8 {
-        height: 2rem;
-      }
-
-      .xs\:max-md\:landscape\:w-8 {
-        width: 2rem;
-      }
-    }
   }
 }
 
